# meson-pr-12994-bug

./: .gitignore  .gitmodules  justfile  meson.build  x86_64-w64-mingw32.txt
subprojects/: cppwinrt.wrap  winmd.wrap
subprojects/packagefiles/winmd/: meson.build
